chore: renovate bundle more into compiler
Signed-off-by: Jonas Kalderstam <jonas@cowboyprogrammer.org>

--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,7 @@
     "packageRules": [
         {
             "matchPackagePatterns": [
+                "^org.jetbrains.kotlin",
                 "^org.jetbrains.kotlin.jvm",
                 "^com.google.devtools.ksp",
                 "^androidx.compose.compiler",
