--- a/release-please/release-please-config.json
+++ b/release-please/release-please-config.json
@@ -1,8 +1,12 @@
 {
     "bootstrap-sha": "3b1886d7f3fbb8e2b2a1d2595fb444fd99456c72",
+    "release-type": "simple",
     "packages": {
       ".": {
         "package-name": "Feeder",
+        "extra-files": [
+          "app/build.gradle.kts"
+        ],
         "exclude-paths": [
             ".github/",
             ".circleci/",
