--- a/cliff.toml
+++ b/cliff.toml
@@ -39,10 +39,10 @@ body = """
 {% endfor %}
 
 {%- if github.contributors | filter(attribute="is_first_time", value=true) | length != 0 %}
-  ## New Contributors
+  ## ❤️ New Contributors
 {%- endif -%}
 
-{% for contributor in github.contributors | filter(attribute="is_first_time", value=true) %}
+{% for contributor in github.contributors | filter(attribute="is_first_time", value=true) | filter(attribute="username", ne="") %}
   * @{{ contributor.username }} made their first contribution
     {%- if contributor.pr_number %} in \
       [#{{ contributor.pr_number }}]({{ self::remote_url() }}/pull/{{ contributor.pr_number }}) \
@@ -78,9 +78,9 @@ postprocessors = [
 # output file path
 # output = "test.md"
 
-#[remote.github]
-#owner = "spacecowboy"
-#repo = "feeder"
+[remote.github]
+owner = "spacecowboy"
+repo = "feeder"
 
 [git]
 # parse the commits based on https://www.conventionalcommits.org
