chore: fixed checkout
Signed-off-by: Jonas Kalderstam <jonas@cowboyprogrammer.org>

--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -28,6 +28,7 @@ jobs:
       with:
         submodules: 'recursive'
         fetch-depth: 0
+        fetch-tags: true
 
     # Verify the SHA-sum
     - name: validate gradle wrapper
