--- a/.github/workflows/android_pr_build.yml
+++ b/.github/workflows/android_pr_build.yml
@@ -25,6 +25,8 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: 'recursive'
+        fetch-depth: 0
+        fetch-tags: true
 
     # Verify the SHA-sum
     - name: validate gradle wrapper
@@ -50,6 +52,10 @@ jobs:
     steps:
     - name: perform the checkout
       uses: actions/checkout@v4
+      with:
+        submodules: 'recursive'
+        fetch-depth: 0
+        fetch-tags: true
 
     - name: setup JDK
       uses: actions/setup-java@v4
