--- a/gradle.properties
+++ b/gradle.properties
@@ -7,10 +7,11 @@
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 
-# Specifies the JVM arguments used for the daemon process.
-org.gradle.jvmargs=-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC -XX:MaxMetaspaceSize=512m
-# Kotlin can require more memory than Gradle!
-kotlin.daemon.jvmargs=-Xmx3072m -XX:MaxMetaspaceSize=512m
+# Github free runners have 7GB of memory
+# ParallelGC for more stable CI builds
+org.gradle.jvmargs=-Xmx4g -Xms256m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC
+# Kotlin can require lots of memory too!
+kotlin.daemon.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
