--- a/.github/workflows/android_pr_build.yml
+++ b/.github/workflows/android_pr_build.yml
@@ -127,6 +127,10 @@ jobs:
     - name: gradle setup
       uses: gradle/actions/setup-gradle@v4
 
+    # Running this first to ensure it is not run in parallel with minify due to memory
+    - name: lint vital release
+      run: ./graldew lintVitalFdroidRelease
+
     - name: release apk
       run: ./gradlew assembleFdroidRelease
 
@@ -154,6 +158,10 @@ jobs:
 
     - name: gradle setup
       uses: gradle/actions/setup-gradle@v4
+
+    # Running this first to ensure it is not run in parallel with minify due to memory
+    - name: lint vital release
+      run: ./graldew lintVitalFdroidRelease
 
     - name: release bundle
       run: ./gradlew bundleFdroidRelease
