--- a/.github/workflows/android_pr_build.yml
+++ b/.github/workflows/android_pr_build.yml
@@ -129,7 +129,7 @@ jobs:
 
     # Running this first to ensure it is not run in parallel with minify due to memory
     - name: lint vital release
-      run: ./graldew lintVitalFdroidRelease
+      run: ./gradlew lintVitalFdroidRelease
 
     - name: release apk
       run: ./gradlew assembleFdroidRelease
@@ -161,7 +161,7 @@ jobs:
 
     # Running this first to ensure it is not run in parallel with minify due to memory
     - name: lint vital release
-      run: ./graldew lintVitalFdroidRelease
+      run: ./gradlew lintVitalFdroidRelease
 
     - name: release bundle
       run: ./gradlew bundleFdroidRelease
