--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,173 @@ on:
       - '*'
 
 jobs:
+  fdroid-apk:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4
+      with:
+        submodules: 'recursive'
+        fetch-depth: 0
+        fetch-tags: true
+
+    - name: prepare for build
+      shell: bash
+      run: ./prepare_for_build.sh
+      env:
+        SERVICEACCOUNTJSON: ${{ secrets.SERVICEACCOUNTJSON }}
+        KEYSTOREPASSWORD: ${{ secrets.KEYSTOREPASSWORD }}
+        KEYSTORE: ${{ secrets.KEYSTORE }}
+        KEYPASSWORD: ${{ secrets.KEYPASSWORD }}
+        KEYALIAS: ${{ secrets.KEYALIAS }}
+
+    - name: setup JDK
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+
+    - name: gradle setup
+      uses: gradle/actions/setup-gradle@v4
+      with:
+        cache-encryption-key: ${{ secrets.GRADLE_ENCRYPTION_KEY }}
+
+    - name: release apk
+      run: ./gradlew assembleFdroidRelease
+    
+    - name: save fdroid apk
+      uses: actions/upload-artifact@v4
+      with:
+        name: fdroid-apk
+        retention-days: 1
+        path: app/build/outputs/apk/fdroid/release/app-fdroid-release.apk
+
+  play-apk:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4
+      with:
+        submodules: 'recursive'
+        fetch-depth: 0
+        fetch-tags: true
+
+    - name: prepare for build
+      shell: bash
+      run: ./prepare_for_build.sh
+      env:
+        SERVICEACCOUNTJSON: ${{ secrets.SERVICEACCOUNTJSON }}
+        KEYSTOREPASSWORD: ${{ secrets.KEYSTOREPASSWORD }}
+        KEYSTORE: ${{ secrets.KEYSTORE }}
+        KEYPASSWORD: ${{ secrets.KEYPASSWORD }}
+        KEYALIAS: ${{ secrets.KEYALIAS }}
+
+    - name: setup JDK
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+
+    - name: gradle setup
+      uses: gradle/actions/setup-gradle@v4
+      with:
+        cache-encryption-key: ${{ secrets.GRADLE_ENCRYPTION_KEY }}
+
+    - name: release apk
+      run: ./gradlew assemblePlayRelease
+    
+    - name: save play apk
+      uses: actions/upload-artifact@v4
+      with:
+        name: play-apk
+        retention-days: 1
+        path: app/build/outputs/apk/play/release/app-play-release.apk
+
+  play-bundle:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4
+      with:
+        submodules: 'recursive'
+        fetch-depth: 0
+        fetch-tags: true
+
+    - name: prepare for build
+      shell: bash
+      run: ./prepare_for_build.sh
+      env:
+        SERVICEACCOUNTJSON: ${{ secrets.SERVICEACCOUNTJSON }}
+        KEYSTOREPASSWORD: ${{ secrets.KEYSTOREPASSWORD }}
+        KEYSTORE: ${{ secrets.KEYSTORE }}
+        KEYPASSWORD: ${{ secrets.KEYPASSWORD }}
+        KEYALIAS: ${{ secrets.KEYALIAS }}
+
+    - name: setup JDK
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+
+    - name: gradle setup
+      uses: gradle/actions/setup-gradle@v4
+      with:
+        cache-encryption-key: ${{ secrets.GRADLE_ENCRYPTION_KEY }}
+
+    - name: release bundle
+      run: ./gradlew bundlePlayRelease
+
+    - name: save bundle
+      uses: actions/upload-artifact@v4
+      with:
+        name: bundle
+        retention-days: 1
+        path: |
+          app/build/outputs/bundle/playRelease/app-play-release.aab
+          app/build/outputs/mapping/playRelease/mapping.txt
+
+  deploy-play:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    needs: [play-bundle]
+    permissions:
+      contents: read
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4
+      with:
+        submodules: 'recursive'
+        fetch-depth: 0
+        fetch-tags: true
+
+    - name: prepare for build
+      shell: bash
+      run: ./prepare_for_build.sh
+      env:
+        SERVICEACCOUNTJSON: ${{ secrets.SERVICEACCOUNTJSON }}
+        KEYSTOREPASSWORD: ${{ secrets.KEYSTOREPASSWORD }}
+        KEYSTORE: ${{ secrets.KEYSTORE }}
+        KEYPASSWORD: ${{ secrets.KEYPASSWORD }}
+        KEYALIAS: ${{ secrets.KEYALIAS }}
+
+    - name: copy bundle
+      uses: actions/download-artifact@v4
+      with:
+        name: bundle
+        path: app/build/outputs/
+    
+    - name: deploy
+      run: ./deploy_playstore_fast.sh
+
   release-build:
     runs-on: ubuntu-latest
     permissions:
@@ -19,18 +186,8 @@ jobs:
           fetch-tags: true
 
       - name: version
-        run: echo "::set-output name=versioncode::$(grep "versionCode" app/build.gradle.kts | sed "s|\s*versionCode = \([0-9]\+\)|\\1|")"
         id: version
-
-      # Verify the SHA-sum
-      - name: validate gradle wrapper
-        uses: gradle/wrapper-validation-action@v3
-
-      - name: setup JDK
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
+        run: echo "versionCode=$(grep "versionCode" app/build.gradle.kts | sed "s|\s*versionCode = \([0-9]\+\)|\\1|")" >> $GITHUB_ENV
 
       - name: prepare for build
         shell: bash
@@ -42,17 +199,18 @@ jobs:
           KEYPASSWORD: ${{ secrets.KEYPASSWORD }}
           KEYALIAS: ${{ secrets.KEYALIAS }}
 
-      - name: gradle setup
-        uses: gradle/actions/setup-gradle@v4
-      - name: gradle build
-        run: ./gradlew build :app:lint check app:bundlePlayRelease
-
-      - name: deploy to play store
-        shell: bash
-        run: ./deploy_playstore_fast.sh
-
       - name: get latest changelog entry
         run: mkdir -p build && ci/latest-changelog.py CHANGELOG.md > build/release_notes.md
+    
+      - name: copy fdroid apk
+        uses: actions/download-artifact@v4
+        with:
+          name: fdroid-apk
+        
+      - name: copy play apk
+        uses: actions/download-artifact@v4
+        with:
+          name: play-apk
 
       - name: release
         uses: softprops/action-gh-release@v2
@@ -63,5 +221,5 @@ jobs:
           body_path: build/release_notes.md
           fail_on_unmatched_files: true
           files: |
-            app/build/outputs/apk/fdroid/release/app-fdroid-release.apk
-            app/build/outputs/apk/play/release/app-play-release.apk
+            app-fdroid-release.apk
+            app-play-release.apk
