--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,16 +69,6 @@ jobs:
       name: android/android_machine
       tag: default
 
-    filters:
-      paths:
-        only:
-          - "app/**"
-          - "gradle/**"
-          - "build.gradle.kts"
-          - "gradle.properties"
-          - "settings.gradle.kts"
-        #   - ".circleci/**"
-
     steps:
       - checkout
       - restore_gradle_cache
@@ -90,8 +80,12 @@ jobs:
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  emulator-tests: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  emulator-tests:
     jobs:
-    #   - emulator-test
-      - gradle-emulator-test
+      - gradle-emulator-test:
+          filters:
+            branches:
+              ignore:
+                # Only run on pull requests
+                - main
+
