--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -207,7 +207,7 @@ jobs:
       with:
         cache-encryption-key: ${{ secrets.GRADLE_ENCRYPTION_KEY }}
 
-    - name: release apk
+    - name: play apk
       run: ./gradlew assemblePlayRelease
 
     - name: save play apk
@@ -253,7 +253,7 @@ jobs:
         KEYPASSWORD: ${{ secrets.KEYPASSWORD }}
         KEYALIAS: ${{ secrets.KEYALIAS }}
 
-    - name: release bundle
+    - name: play bundle
       run: ./gradlew bundlePlayRelease
 
     - name: save bundle
@@ -266,6 +266,7 @@ jobs:
           app/build/outputs/mapping/playRelease/mapping.txt
 
   validate-deploy:
+    if: github.event_name == 'pull_request' && github.repository == 'spacecowboy/feeder'
     runs-on: ubuntu-latest
     timeout-minutes: 10
     needs: [play-bundle]
