--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -307,7 +307,7 @@ jobs:
     if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/'))
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    needs: [validate-deploy]
+    needs: [play-bundle]
     permissions:
       contents: read
     steps:
