chore: reduce required build memory and reduce number of workers
Signed-off-by: Jonas Kalderstam <jonas@cowboyprogrammer.org>

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,14 +9,14 @@
 
 # Github free runners have 16GB of memory
 # ParallelGC for more stable CI builds
-org.gradle.jvmargs=-Xmx4g -Xms256m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC
+# Note that dexOptions.javaMaxHeapSize is set to 1g by default so gradle needs to reserve 1g for dex
+org.gradle.jvmargs=-Xmx2500m -Xms256m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC
 # Kotlin can require lots of memory too!
-kotlin.daemon.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=512m
+kotlin.daemon.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m
+org.gradle.parallel=false
+org.gradle.workers.max=4
+org.gradle.priority=low
 
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
 android.enableJetifier=false
 android.useAndroidX=true
 
